fixed page body visibility to push footer to bottom on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,10 @@ padding: 5px;
 font-size: 16px;
 	
 	}
-#menu-footer  li a{ color: #fff;}	
+#menu-footer  li a{ color: #fff;}
+#mobilepagebody  {
+	display : inline;
+}
 .fluid-width-video-wrapper video {
 	    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.2);
 	}
@@ -1400,6 +1403,7 @@ a.post-thumbnail:hover {
  * 6.4 Entry Content
  * -----------------------------------------------------------------------------
  */
+
 
 .entry-content,
 .entry-summary,
